--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <!-- Projet 1 : Robot Hexapode -->
 <div class="col">
     <div class="card h-100">
-      <img src="img/ROBOT.jpg" class="card-img-top" alt="Robot Hexapode">
+      <img src="Img/ROBOT.jpg" class="card-img-top" alt="Robot Hexapode">
       <div class="card-body">
         <h5 class="card-title">Robot Hexapode</h5>
         <p class="card-text">Conception d’un robot hexapode autonome pour les interventions en milieux hostiles.</p>
@@ -139,7 +139,7 @@
   <!-- Projet 2 : Optimisation Topologique -->
   <div class="col">
     <div class="card h-100">
-      <img src="img/Mel2.jpg" class="card-img-top" alt="Optimisation topologique">
+      <img src="Img/Mel2.jpg" class="card-img-top" alt="Optimisation topologique">
       <div class="card-body">
         <h5 class="card-title">Optimisation topologique</h5>
         <p class="card-text">Re-design d’une pièce mécanique pour l’impression 3D (LPBF) avec Fusion 360 et Netfabb.</p>
@@ -174,7 +174,7 @@
   <!-- Projet 3 : Expérience FIMU -->
   <div class="col">
     <div class="card h-100">
-      <img src="img/FIMU1.jpg" class="card-img-top" alt="Expérience FIMU">
+      <img src="Img/FIMU1.jpg" class="card-img-top" alt="Expérience FIMU">
       <div class="card-body">
         <h5 class="card-title">Expérience Innovation Crunch Time</h5>
         <p class="card-text">Participation à l'organisation technique et logistique de la FIMU.</p>
@@ -209,7 +209,7 @@
   <!-- Projet 4 : Étude de Flambement -->
   <div class="col">
     <div class="card h-100">
-      <img src="img/flamb.png" class="card-img-top" alt="Étude de flambement">
+      <img src="Img/flamb.png" class="card-img-top" alt="Étude de flambement">
       <div class="card-body">
         <h5 class="card-title">Étude de flambement</h5>
         <p class="card-text">Analyse du flambement d’une poutre hyperstatique avec modélisation en C# et éléments finis.</p>
