--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
         <div class="container my-5 py-5">
           <div class="row">
             <div class="col-md-6">
-              <img src="Img/mefinal.png" alt="Photo de">
+                <div class="row">
+                    <img src="Img/mefinal.png" alt="Photo de">
+                </div>
+                <div class="row">
+                    <h2 class="--bs-light-text-emphasis text-light py-3 merriweather banne1-desc">
+                Mouhamed Lamine <br>FALL
+              </h2>
+                </div>
+              
             </div>
             <div class="col-md-6">
               <h1 class="--bs-light-text-emphasis text-light py-3 merriweather banne1-desc">
