--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - MyResume Bootstrap Template</title>
+  <title>Index - mon-portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -463,7 +463,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="https://formspree.io/f/mgvaggjb" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formspree.io/f/mgvaggjb" method="POST" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
             
                 <div class="col-md-6">
@@ -531,7 +531,7 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
