--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="https://formspree.io/f/mgvaggjb" method="POST" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formspree.io/f/mgvaggjb" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
             
                 <div class="col-md-6">
