--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <a href="https://x.com/fall_mouha17562?s=21"><i class="bi bi-twitter-x"></i></a>
               <a href="https://www.instagram.com/everyonehates.lamine?igsh=MTAxNXkyYnNpb2pwMA%3D%3D&utm_source=qr"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/in/mouhamed-lamine-fall-mon-profil/"><i class="bi bi-linkedin"></i></a>
-              <a href=""><i class="bi bi-download"></i></a>
+              <a href="Docs/Mon CV.pdf" download><i class="bi bi-download"></i></a>
             </div>
           </div>
         </div>
