--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Diplome:</strong> <span>Diplome d'Ingénieur (En cours)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>fall.mouhamedlamine07@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Travail:</strong> <span>Ouvert à toute possibilité</span></li>
@@ -219,6 +219,13 @@
               <span class="skill"><span>Elements finis</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Projection Thermique</span> <i class="val">15%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
