Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
             <!-- Stage ST40 (images à mettre, et page description)-->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Stage">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/Image Torche.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Stage Laboratoire ICB LERMPS</h4>
                 <p>Développement de revêtements biomédicaux par projection thermique. (images à mettre, et page description)</p>
