--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@
               <img src="assets/img/masonry-portfolio/Image Torche.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Stage Laboratoire ICB LERMPS</h4>
-                <p>Développement de revêtements biomédicaux par projection thermique. (images à mettre, et page description)</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-8.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <p>Développement de revêtements biomédicaux par projection thermique.</p>
+                <a href="assets/img/masonry-portfolio/Image Torche.jpeg" title="Stage Laboratoire ICB LERMPS" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html#ST40" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
             
