Add ST40 project details to portfolio
Added details for the ST40 project including title, description, images, category, and date.

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -331,6 +331,21 @@
               Categorie: "Journée découverte",
               date: "Juillet 2023",
             },
+
+            ST40: {
+              title:
+                "Journée de découverte – Département Maintenance, ICS (Industries Chimiques du Sénégal)",
+              description:
+                "<p>Ce stage de cinq mois, réalisé au sein du LERMPS (ICB – UTBM), a offert une immersion complète dans le domaine de la projection thermique appliquée au développement de matériaux poreux fonctionnels.<br>La première phase du travail a consisté à concevoir et usiner un dispositif permettant la projection simultanée de deux poudres à l’aide d’une torche flamme, avant de préparer et découper des substrats en acier inoxydable.<br>Plusieurs séries de dépôts ont ensuite été réalisées avec différents mélanges de poudres (Al₂O₃–316L puis Al₂O₃–Cu), suivies d’un important travail de découpe, d’enrobage à froid et de polissage pour les caractérisations microstructurales.<br>Ce stage a permis de comprendre l’influence des paramètres de projection sur la qualité et la cohésion des dépôts, dans l’objectif d’optimiser les conditions permettant d’obtenir une matrice poreuse maîtrisée. Une seconde phase, actuellement en préparation, consistera à dissoudre la phase métallique afin de dégager la porosité recherchée.<br>Cette expérience, mêlant expérimentation, conception mécanique et analyses microscopiques, a renforcé l’intérêt pour les procédés de fabrication avancés et consolidé l’envie d’évoluer dans le domaine des matériaux et de l’ingénierie mécanique.</p>",
+              image: "assets/img/masonry-portfolio/exemple montage.png",
+              image2: "assets/img/masonry-portfolio/vid Robot.mp4",
+              image3: "assets/img/masonry-portfolio/vid torche.mp4",
+              Categorie: "Stage Assistant ingénieur",
+              date: "Septembre 2025 - Fevrier 2026",
+            },
+
+
+            
             // "Projet": {
             //   title: "",
             //   description: "",
