Add comment for personal portfolio section

--- a/index.html
+++ b/index.html
@@ -393,7 +393,8 @@
                 <a href="portfolio-details.html#ST40" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-            
+
+            <!-- PERSO-->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Perso">
               <img src="assets/img/masonry-portfolio/FIMU1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
