Fix image path and update project description
Updated image source and alt text, and modified project description.

--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
 
             <!-- Stage ST40 (images à mettre, et page description)-->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Stage">
-              <img src="assets/img/masonry-portfolio/Image Torche.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/Image-Torche.jpeg" class="img-fluid" alt="torche">
               <div class="portfolio-info">
                 <h4>Stage Laboratoire ICB LERMPS</h4>
-                <p>Développement de revêtements biomédicaux par projection thermique.</p>
+                <p>Développement de revêtements fonctionnels par projection thermique.</p>
                 <a href="assets/img/masonry-portfolio/Image Torche.jpeg" title="Stage Laboratoire ICB LERMPS" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html#ST40" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
